<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.android.timesheetchecker.ui.membersdetail.MemberDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_close"
                app:title="Member name"
                app:titleTextColor="@android:color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <Switch
            android:id="@+id/include_user_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/include_user_in_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <Switch
            android:id="@+id/include_user_inDev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/include_user_inDev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_user_switch" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorDisabledBackground"
            app:layout_constraintEnd_toEndOf="@+id/include_user_inDev"
            app:layout_constraintStart_toStartOf="@+id/include_user_inDev"
            app:layout_constraintTop_toBottomOf="@+id/include_user_inDev" />

        <TextView
            android:id="@+id/weeklyReportHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/last_week_s_report"
            android:textColor="?android:attr/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/include_user_switch"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weeklyReportRv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weeklyReportHeading"
            tools:itemCount="7"
            tools:listitem="@layout/entries_list_item" />

        <TextView
            android:id="@+id/totalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/total"
            android:textColor="?android:attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weeklyReportRv" />

        <TextView
            android:id="@+id/totalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/muli_bold"
            android:textColor="?android:attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/totalTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/totalTitle"
            tools:text="35:00 hrs" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/weeklyReportGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="totalValue,totalTitle,weeklyReportRv,weeklyReportHeading" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/markCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_done"
            app:iconTint="@color/colorOnPrimary"
            android:textColor="@color/colorOnPrimary"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/mark_completed"
            android:textAllCaps="false"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
